cleaning up attachemnts after running test

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,11 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+pure rails app with jquery
 
-Things you may want to cover:
+rake db:prepare and rake db:seed will seed one user to be able login: test@test.com/12345678
 
-* Ruby version
+using sqlite DB for easier shippment and demoing
 
-* System dependencies
+minitest replaced with rspec in spec/
 
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+bundle exec rspec
